fix backToTop visibility

--- a/src/components/BackToTop/BackToTop.scss
+++ b/src/components/BackToTop/BackToTop.scss
@@ -4,5 +4,16 @@
   position: fixed;
   bottom: 1rem;
   right: 1rem;
-  background-color: rgba($color: $color-white, $alpha: 1);
+  transform: translateY(4rem);
+  transition: all 0.5s;
+  background-color: rgba($color: $color-white, $alpha: 0.2);
+
+  &--visible {
+    transform: translateY(0);
+  }
+
+  &:hover,
+  &:focus {
+    background-color: rgba($color: $color-white, $alpha: 0.6);
+  }
 }
