--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -5,7 +5,6 @@
 
   &__List {
     display: flex;
-    justify-content: center;
     align-items: stretch;
     height: 100%;
 
